--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 ### Build ###
-docker build -t desktop . 
+docker build -t xmrz/phantom-desktop . 
 
 
 ### Without TLS ###
 docker run --rm --name=desktop \
  -p 15900:5900/tcp -p 17000:7000/tcp -p 18000:8000 \
  -v $HOME/desktop-home:/home/phantom \
- -d desktop
+ -d xmrz/phantom-desktop
 
 
 ### With TLS ###
@@ -18,7 +18,7 @@ docker run --rm --name=desktop \
  -e TLS_CERTIFICATE_PRIVATE_KEY=/private_key.pem \
  -v /tls_config/snakeoil.crt:/certificate.crt \
  -v /tls_config/snakeoil.pem:/private_key.pem \
- -d desktop
+ -d xmrz/phantom-desktop
 
 
 ### Stop ###
@@ -26,12 +26,12 @@ docker stop desktop
 
 
 ### Restartable ###
-docker run --restart=unless-stopped --name=desktop -p 15900:5900 -p 17000:7000/tcp -p 18000:8000 -e PASSWORD=very_complex_password -d desktop
+docker run --restart=unless-stopped --name=desktop -p 15900:5900 -p 17000:7000/tcp -p 18000:8000 -e PASSWORD=very_complex_password -d xmrz/phantom-desktop
 docker stop desktop
 docker start desktop
 
 
 ### Ephemeral ###
-docker run --rm -p 17000:7000 -d desktop
+docker run --rm -p 17000:7000 -d xmrz/phantom-desktop
 
 
